# DeepSeek-Reasonix

./: CHANGELOG.md  README.md  README.zh-CN.md  go.mod  go.sum  package-lock.json  package.json  reasonix.example.toml  vitest.config.ts
.github/workflows/: ci.yml  release-desktop.yml  release.yml
cmd/e2ebench/: diff.go  main.go
crates/reasonix-render/: Cargo.toml
crates/reasonix-render/src/: lib.rs  main.rs  producer.rs  state.rs  theme.rs
crates/reasonix-render/tests/: producer.rs
dashboard/src/: App.tsx  protocol.ts  styles.css
desktop/: README.md  app.go  app_test.go  bound_array_contract_test.go  dotenv.go  dotenv_test.go  go.mod  go.sum  heartbeat.go  main.go  package-lock.json  package.json  sessions.go  settings_app.go  settings_app_test.go  skills_app_test.go  tab_profile_test.go  tabs.go  tabs_topic_test.go  updater.go  workspace_changes.go  workspace_test.go
desktop/src/: App.tsx  (+6 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: CONFIG_PATHS.md  CONFIG_PATHS.zh-CN.md  GOAL_ENFORCEMENT.zh-CN.md  MIGRATING.md  SPEC.md
scripts/: desktop-build.sh
src/: context-manager.ts  loop.ts
tests/: acp.test.ts  chat-mcp-startup-summary.test.ts  context-manager-cache-aligned-fold.test.ts  desktop-qq-config.test.ts  desktop-qq-settings-ui.test.ts  edit-blocks.test.ts  scene-trace-frame.test.ts  shell-confirm-render.test.tsx  slash.test.ts  stdin-reader.test.ts  user-message-newlines.test.ts  wizard.test.tsx
tools/: bench-fold-cache-live.mjs  bench-fold-cache-shape.mjs
(+190 files in other folders)
